--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -1,6 +1,9 @@
 pipeline {
     agent { node { label 'AGENT-1' } }
-
+    options {
+        ansiColor('xterm')
+    }
+   
     stages {
         stage('Init') {
             steps {
