--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -15,6 +15,7 @@ pipeline {
                  ''' 
             }
         }
+    }
         stage('Plan') {
             steps {
                 sh '''
@@ -25,6 +26,16 @@ pipeline {
                  ''' 
             }
         }
+        stage('Approve') {
+            steps {
+                input "Shall I apply?"
+            }
+        }
+
+        stage('Apply') {
+            steps {
+                sh 'terraform apply -auto-approve'
+            }
        
     }
 
