--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -35,12 +35,9 @@ pipeline {
         stage('Apply') {
             steps{
                 
-                sh '''
-                    pwd
-                    ls -ltr
-                    cd 01-vpc
-                    terraform apply -auto-approve
-                '''
+                sh 'cd 01-vpc'
+                sh 'terraform apply -auto-approve'
+                    
             }
         }
     
