--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -16,6 +16,7 @@ pipeline {
             }
         }
     }
+
         stage('Plan') {
             steps {
                 sh '''
@@ -26,7 +27,7 @@ pipeline {
                  ''' 
             }
         }
-        
+
         stage('Approve') {
             steps{
                 input "Shall I apply?"
@@ -36,8 +37,10 @@ pipeline {
         stage('Apply') {
             steps{
                 
-                sh 'cd 01-vpc'
-                sh 'terraform apply -auto-approve'
+                sh '''
+                    pwd
+                    ls -ltr
+                '''    
                     
             }
         }
