--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -40,6 +40,8 @@ pipeline {
                 sh '''
                     pwd
                     ls -ltr
+                    cd 01-vpc
+                    terraform apply -auto-approve
                 '''    
                     
             }
